# check-localized-wordpress-releases

./: .gitignore  README.md  setup.cfg
.github/workflows/: python-publish.yml
src/check_localized_wordpress_releases/: __main__.py  html_getter.py  localize_checker.py  releases_parser.py
test/: test_html_getter.py  test_localize_checker.py  test_releases_parser.py
test/assets/: en_releases.html
