[metadata]
name = check-localized-wordpress-releases
version = 0.0.1a1
description = Check localized WordPress releases
author = mh35
author_email = contact@mh35.info
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.13

[options]
install_requires =
    requests >= 2.32.4
    lxml[source,cssselect,html5,htmlsoup,html-clean] >= 6.0.0
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
dev =
    pylint >= 3.3.6
    pycodestyle >= 2.13.0
    pydocstyle >= 6.3.0
    mypy >= 1.15.0
    flake8 >= 7.2.0
    flake8-annotations >= 3.1.1
    flake8-black >= 0.3.6
    flake8-builtins >= 2.5.0
    flake8-comprehensions >= 3.16.0
    flake8-docstrings >= 1.7.0
    flake8-isort >= 6.1.2
    pep8-naming >= 0.15.0
    bandit >= 1.8.3
    black >= 25.1.0
    isort >= 6.0.1
    types-requests >= 2.32.4.20250611
    types-lxml >= 2025.3.30
test =
    pytest >= 8.3.5
    pytest-cov >= 6.1.1
doc =
    Sphinx >= 8.2.3